add node engine in packge.json

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "repository": "https://github.com/sagspot/login-system.git",
   "author": "Oliver",
   "license": "MIT",
+  "engines": {
+    "node": "14.17.0"
+  },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "boxen": "^5.1.0",
