--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "Oliver",
   "license": "MIT",
   "engines": {
-    "node": "14.17.0"
+    "node": "14.17.0",
+    "npm": "6.14.13",
+    "yarn": "1.22.10"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -21,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "googleapis": "^87.0.0",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.5",
